--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 		<repository>
 			<id>conjars</id>
 			<name>Conjars repository</name>
-			<url>https://conjars.org/repo</url>
+			<url>http://conjars.org/repo</url>
 		</repository>
 	</distributionManagement>
 
