--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cascading.plumber</groupId>
@@ -42,8 +43,8 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- real dependencies -->
-	<!-- conjars doesn't interpret properties-based versions, so use duplicated 
-		hard-coded values instead... -->
+		<!-- conjars doesn't interpret properties-based versions, so use duplicated 
+			hard-coded values instead... -->
 		<dependency>
 			<groupId>cascading</groupId>
 			<artifactId>cascading-hadoop</artifactId>
@@ -53,6 +54,11 @@
 			<groupId>cascading</groupId>
 			<artifactId>cascading-local</artifactId>
 			<version>2.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.1</version>
 		</dependency>
 		<!-- provided -->
 		<dependency>
